<resources>
    <string name="app_name">Robonesia</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="nama_siswa">Nama Siswa</string>
    <string name="no_induk_siswa">No Induk Siswa</string>
    <string name="sekolah">Sekolah</string>
    <string name="email_orang_tua">Email Orang Tua</string>
    <string name="no_hp_orang_tua">No. Hp Orang Tua</string>
    <string name="daftar">Daftar</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>